# keystone-engage

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json
data/corpus/: compliance-disclosures.md  empathy-patterns.md  escalation-criteria.md  hardship-programs.md  payment-arrangements.md  regulatory-boundaries.md
data/eval/: cases.jsonl
docs/: MIGRATION.md  architecture.md  day-one-substrate-package.md  relation-to-keystone-core.md
evals/: seal_results.py
evals/agent-v0/: report.md  results.json  run_metadata.json
evals/agent-v1/: report.md  results.json  run_metadata.json
migrations/: 001_chunks.sql  002_audit_entries.sql  003_day_one_substrate.down.sql  003_day_one_substrate.sql  004_task_state_v2.sql  005_specialist_agents.sql
observability/: otel-collector-config.yaml
src/keystone_engage/: __init__.py  api.py  api_v2f.py  audit.py  auth.py  config.py  coordinator.py  corpus.py  dispatch.py  empathy.py  escalation.py  eval.py  eventbus.py  intent.py  models.py  observability.py  orchestrator.py  pgaudit.py  pgvectorstore.py  rag.py  registry.py  vectorstore.py
src/keystone_engage/substrate/: __init__.py  models.py  store.py
tests/: test_coordinator.py  test_eventbus.py  test_registry.py  test_smoke.py  test_substrate.py  test_task_state_v2.py
tools/: __init__.py  server.py
tools/catalog/: hello_tool.py
