[project]
name = "keystone-engage"
version = "0.1.0"
description = "Governed conversational agent for regulated customer interaction. Part of the Keystone Applied Intelligence platform."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nats-py>=2.9.0",
    "openai>=1.0",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40",
    "opentelemetry-exporter-otlp>=1.20",
    "numpy>=2.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone_engage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires live NATS on TrustNode"]
addopts = '-m "not integration"'
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]
